# tiralabra

./: README.md  main.py  pyproject.toml  viikkoraportti 1.md
Dokumentaatio/: määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti 1.md  viikkoraportti 2.md  viikkoraportti 3.md  viikkoraportti 4.md
dtmf_decoder/: __init__.py
tests/: test_DTMF.py
